@@ -1,4 +1,4 @@
-.TH SG_WRITE_SAME "8" "November 2011" "sg3_utils\-1.33" SG3_UTILS
+.TH SG_WRITE_SAME "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
 sg_write_same \- send the SCSI WRITE SAME command
 .SH SYNOPSIS
@@ -189,6 +189,12 @@ commands (see the sg_unmap and sg_format utilities).
 Various numeric arguments (e.g. \fILBA\fR) may include multiplicative
 suffixes or be given in hexadecimal. See the "NUMERIC ARGUMENTS" section
 in the sg3_utils(8) man page.
+.PP
+In Linux at this time the sg driver does not support cdb sizes greater than
+16 bytes. Hence a device node like /dev/sg1 which is associated with the
+sg driver will fail with this utility if the \fI\-\-32\fR option is
+given (or implied by other options). The bsg driver with device nodes like
+/dev/bsg/6:0:0:1 does support cdb sizes greater than 16 bytes.
 .SH EXIT STATUS
 The exit status of sg_write_same is 0 when it is successful. Otherwise see
 the sg3_utils(8) man page.
@@ -280,7 +286,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2009\-2011 Douglas Gilbert
+Copyright \(co 2009\-2012 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
