@@ -1,4 +1,4 @@
-.TH SG_XCOPY "8" "September 2012" "sg3_utils\-1.34" SG3_UTILS
+.TH SG_XCOPY "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
 sg_xcopy \- copies data to and from files and devices. Specialised for
 devices that support the SCSI EXTENDED COPY command.
@@ -232,6 +232,13 @@ The status of the SCSI EXTENDED COPY command can be queried with
 .PP
 Currently only block-to-block transfers are implemented; \fIIFILE\fR
 and \fIOFILE\fR must refer to a SCSI block device.
+PP
+No account is taken of partitions so, for example, /dev/sbc2, /dev/sdc,
+/dev/sg2, and /dev/bsg/3:0:0:1 would all refer to the same thing: the
+whole logical unit (i.e. the whole disk) starting at LBA 0. So any
+partition indication (e.g. /dev/sdc2) is ignored. The user should set
+\fISKIP\fR,  \fISEEK\fR and \fICOUNT\fR with information obtained
+from a command like 'fdisk -l -u /dev/sdc' to account for partitions.
 .SH EXAMPLES
 Copy 2M of data from the start of one device to another:
 .PP
