@@ -30,7 +30,7 @@
 
 */
 
-static char * version_str = "0.64 20120929";    /* spc4r36 + sbc3r32 */
+static char * version_str = "0.63 20121112";    /* spc4r36 + sbc3r33 */
 
 extern void svpd_enumerate_vendor(void);
 extern int svpd_decode_vendor(int sg_fd, int num_vpd, int subvalue,
@@ -1613,7 +1613,8 @@ decode_b0_vpd(unsigned char * buff, int len, int do_hex, int pdt)
         if (len > 19) {     /* added in sbc3r09 */
             u = (buff[16] << 24) | (buff[17] << 16) | (buff[18] << 8) |
                 buff[19];
-            printf("  Maximum prefetch transfer length: %u blocks\n", u);
+            printf("  Maximum prefetch length: %u blocks\n", u);
+            /* was 'Maximum prefetch transfer length' prior to sbc3r33 */
         }
         if (len > 27) {     /* added in sbc3r18 */
             u = ((unsigned int)buff[20] << 24) | (buff[21] << 16) |
