@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009-2011 Douglas Gilbert.
+ * Copyright (c) 2009-2012 Douglas Gilbert.
  * All rights reserved.
  * Use of this source code is governed by a BSD-style
  * license that can be found in the BSD_LICENSE file.
@@ -26,7 +26,7 @@
 #include "sg_cmds_basic.h"
 #include "sg_cmds_extra.h"
 
-static char * version_str = "0.99 20111117";
+static char * version_str = "1.00 20121112";
 
 
 #define ME "sg_write_same: "
@@ -206,6 +206,8 @@ do_write_same(int sg_fd, const struct opts_t * optsp, const void * dataoutp,
         wsCmdBlk[14] = (optsp->grpnum & 0x1f);
         break;
     case WRITE_SAME32_LEN:
+	/* Note: In Linux at this time the sg driver does not support
+	 * cdb_s > 16 bytes long, but the bsg driver does. */
         wsCmdBlk[0] = VARIABLE_LEN_OP;
         wsCmdBlk[6] = (optsp->grpnum & 0x1f);
         wsCmdBlk[7] = WRITE_SAME32_ADD;
