@@ -2,8 +2,9 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.35 [20121026] [svn: r464]
+Changelog for sg3_utils-1.35 [20121112] [svn: r465]
   - sg_stpg: with --offline fix 'Invalid state 0xe'
+  - sync to sbc3r33
   - sg_pt_win32, sg_scan(win32): changes for cygwin 1.7.17
 
 Changelog for sg3_utils-1.34 [20121013] [svn: r461]
